@@ -1,5 +1,10 @@
 # $Id$
 
+2007-05-01	Sergey S. Sergeev
+
+	* meta/builders/BaseBuilder.class.php: return query if setters is
+	 empty.
+
 2007-04-30	Konstantin V. Arkhipov
 
 	* 0.10.0 released.
